overflow fix

--- a/src/styles/components/contact-form.scss
+++ b/src/styles/components/contact-form.scss
@@ -8,10 +8,9 @@
         background-color: #F4F5FC;
         height: 46px;
         border-radius: 5px;
-        // background-color: transparent;
         border-radius: 8px;
         margin-bottom: 14px;
-        min-width:360px ;
+        min-width: 340px ;
     }
 
     // TICK
